# api-posting-system

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/: alembic.ini  main.py
app/api/v1/: api.py
app/api/v1/endpoints/: auth.py  posting.py
app/api/v1/endpoints/responses/: auth_responses.py  posting_responses.py
app/api/v1/endpoints/router_config/: auth_config.py  posting_config.py
app/core/: auth.py  configs.py  database.py  deps.py  security.py
app/migrations/: env.py
app/migrations/versions/: 9ae9105108dc_criadas_as_tabelas_enderecos_clientes_e_.py
app/models/: address_model.py  client_auth_model.py  posting_model.py
app/schemas/: client_auth_schema.py  posting_schema.py
app/services/: client_auth_services.py  posting_services.py  rabbitmq_consumer.py  rabbitmq_publisher.py
tests/: test_postgres_connection.py  test_rabbitmq_connection.py  test_redis_connection.py
